--- a/Views/LeaveStatus/Index.cshtml
+++ b/Views/LeaveStatus/Index.cshtml
@@ -13,7 +13,7 @@
     <br>
 
     <h4>Pending Leave</h4>
-    <table class="table" border="1">
+    <table id="pendingLeave" class="table" border="1">
         <tr>
             <th>
                 Emp Name
@@ -65,7 +65,7 @@
 
     <hr />
     <h4>Approved & Rejected Leave</h4>
-    <table class="table" border="1">
+    <table id="approveRejectleave" class="table" border="1">
         <tr>
             <th>
                 Emp Name
