--- a/Views/LeaveRequest/Create.cshtml
+++ b/Views/LeaveRequest/Create.cshtml
@@ -85,7 +85,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Apply" class="btn btn-info" />
+                <input type="submit" value="Apply" class="btn btn-warning" />
             </div>
         </div>
     </div>
@@ -93,7 +93,7 @@
     <hr />
     <div>
         <h4>Leave History</h4>
-        <table class="table" border="1">
+        <table id="leaveHistory" class="table" border="1">
             <tr>
                 <th>
                     Year
