--- a/Views/EmployeeMasters/Create.cshtml
+++ b/Views/EmployeeMasters/Create.cshtml
@@ -35,13 +35,16 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EmployeeSupervisorCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.EmployeeSupervisorCode, "", new { @class = "text-danger" })
+                &nbsp;
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.EmployeeLeavePacakge, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmployeeLeavePacakge, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.EmployeeLeavePacakge,
+                    new SelectList(Enum.GetValues(typeof(LeaveManagementSystem.Models.LeavePacakge))),
+                    "-------")
                 @Html.ValidationMessageFor(model => model.EmployeeLeavePacakge, "", new { @class = "text-danger" })
             </div>
         </div>
