--- a/Content/Site.css
+++ b/Content/Site.css
@@ -28,7 +28,7 @@ textarea {
     background: #716492;
 }
 #pendingLeave tr {
-    color: white;
+    color: black;
     background: #969696d0;
 }
 #approveRejectleave th {
