--- a/Views/LeaveRequest/Create.cshtml
+++ b/Views/LeaveRequest/Create.cshtml
@@ -72,8 +72,7 @@
                     <label>Approving Officer :</label>  @ViewData["Supervisor"]
                 </div>
                 <div class="form-group">
-                    <label>Employee Code :</label>
-                    <input type="text" id="empCode" value=" @TempData["LoggedEmployee"]" name="employeeCode" re />
+                    <label>Employee Code : </label> @TempData["LoggedEmployeeCode"]
                 </div>
             </div>
             <div class="col-md-12">
