--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("| Apply Leave |", "Create", "LeaveRequest")</li>
                     <li>@Html.ActionLink("| Leave Confirmations |", "Index", "LeaveStatus")</li>
-                    <li>@Html.ActionLink("| Manage Employee |", "Create", "EmployeeMasters")</li>
+                    <li>@Html.ActionLink("| Create Employee |", "Create", "EmployeeMasters")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
