--- a/Views/Users/Create.cshtml
+++ b/Views/Users/Create.cshtml
@@ -28,7 +28,7 @@
                 <input type="password" name="password" />
             </div>
         </div>
-
+        <h6><strong>Hint: </strong> Use employee code for username & password</h6>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Login" class="btn btn-default" />
