--- a/Views/LeaveStatus/Index.cshtml
+++ b/Views/LeaveStatus/Index.cshtml
@@ -9,7 +9,7 @@
 }
 
 <body>
-    <h2><strong>Leave Confirmations</strong></h2>
+    <h2><strong>Leave Confirmations By @Session["LoggedSupervisorName"]</strong></h2>
     <br>
 
     <h4>Pending Leave</h4>
