--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>.: ABC :.</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("| Apply Leave |", "Create", "LeaveRequest")</li>
-                    <li>@Html.ActionLink("| Leave Confirmations |", "Index", "LeaveStatus")</li>
+                    @*<li>@Html.ActionLink("| Apply Leave |", "Create", "LeaveRequest")</li>
+                    <li>@Html.ActionLink("| Leave Confirmations |", "Index", "LeaveStatus")</li>*@
                     <li>@Html.ActionLink("| Create Employee |", "Create", "EmployeeMasters")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
